- Create svn branch 0.6.18
- Setup-file for 0.6.18

----------------------------------------------------------------------------------------------------
Date : 01.03.2011 | Release : 0.6.19    | Author  : H.Weber | CVS:454
----------------------------------------------------------------------------------------------------

Changes:

- Initial-Work for release named "Avatar"
- changes for release 0.6.19 inside setup.sh 
- Integrate installation of Handbrake 0.9.5 into setup.sh 
- Integrate upgrade of Handbrake 0.9.5 into setup.sh 
- Integrate installation of makemkv 1.6.4 into setup.sh 
- Integrate upgrade of makemkv 1.6.4 into setup.sh 
- Added a single copy-protection detection string to state.sh
- Integrate installation / upgrade of makemkv 1.6.5 into setup.sh (only 32)
- Integrate installation / upgrade of makemkv 1.6.5 into setup.sh (only 64)
- Thanks to chippyash2 english based documentation is finished.
- Added README.de.linux 
- Integrate installation / upgrade of makemkv 1.6.6 into setup.sh (only 32)

Fixes:

- verbose-mode logging had a failure inside osrun
- Inside bluray-transcode.sh and dvd-mkv.sh was a failure that occur after a succesfull operation
  the destination file was not renamed properly.
- If we do rename we should also include a extension (fix for above fix)
- With a heavy load the predefined delay value for the ssh-testcommand is may 
  to small.(Incremented the value by 1).
- Do not remove openssh-server and openssh-client during the execution of deinstall.sh 
- Fix issue 19 
- README.linux replaced with README.en.linux
- Possible fix that prevent occur of issue 17 ...
- Fixed typo german language <string id="33300">
- 2 functions inside the addon are not unicode-safe.
- Finaly fixed issue 19 (confirmed)
- Fixed ugly bug inside dvd-chapter.sh 
  (there was no device for dvd on some calls to lsdvd)
  Thanks to fabrice.peiffer@convar.com
- Fixed issue 22 with loging asci-code inside log.



  

 
 


 






